--- a/Jeu N°2/css/styles.css
+++ b/Jeu N°2/css/styles.css
@@ -25,7 +25,7 @@
 .cell{
     width: 30%;
     height: 95px;
-    background: #4e96f5;
+    background-color: #4e96f5;
     border: black solid 3px;
     font-size: 30px;
     font-weight: 700;
@@ -33,6 +33,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.win-cell{background-color: yellow; color: black;}
 
 h1{
     height: 20%;
